--- a/e_commerce/pubspec.yaml
+++ b/e_commerce/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   intl: ^0.17.0
   curved_navigation_bar: ^1.0.3
   lottie: ^1.0.1
+  custom_navigation_bar: ^0.8.2
+  flutter_staggered_grid_view: ^0.6.2
 
 
 
@@ -90,6 +92,7 @@ flutter:
   - Assets/animations/83666-payment-successfull.json
   - Assets/animations/70332-no-data-animation.json
   - Assets/animations/137836-add-to-cart.json
+  - Assets/animations/129489-heart-filled.json
   
   
   
